--- a/index.html
+++ b/index.html
@@ -184,14 +184,14 @@
           </div>
         </article>
 
-        <!-- Project 2: E-commerce Demo -->
+        <!-- Project 2: E-commerce -->
         <article class="group bg-cyan-800 border border-teal-300 rounded-xl overflow-hidden shadow-sm hover:shadow-md transition">
           <div class="aspect-video overflow-hidden">
             <img src="img/PerfectionShop.PNG" alt="E-commerce Demo" class="w-full h-full object-cover group-hover:scale-[1.02] transition">
           </div>
           <div class="p-4">
             <h3 class="font-semibold text-cyan-300">E-Commerce Demo</h3>
-            <p class="mt-1 text-sm text-white">Product grid + search + cart counter (localStorage). Bootstrap layout, responsive design.</p>
+            <p class="mt-1 text-sm text-white">Responsive clothes e-commerce demo with HTML, Tailwind & vanilla JS: product search/filter, category links, slide-out cart (localStorage), GSAP animations, and a testimonials carousel.</p>
             <div class="mt-3 flex gap-2">
               <a href="https://abdeladim91.github.io/PerfectionShop/" target="_blank" class="inline-flex items-center gap-2 px-3 
           py-1.5 rounded-md text-stone-900 bg-teal-300 hover:bg-teal-700 transition">Live</a>
@@ -342,3 +342,4 @@
   </script>
 </body>
 </html>
+
