--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
             <img src="img/PerfectionShop.PNG" alt="E-commerce Demo" class="w-full h-full object-cover group-hover:scale-[1.02] transition">
           </div>
           <div class="p-4">
-            <h3 class="font-semibold text-cyan-300">E-Commerce Demo</h3>
+            <h3 class="font-semibold text-cyan-300">Perfection Shop</h3>
             <p class="mt-1 text-sm text-white">Responsive clothes e-commerce demo with HTML, Tailwind & vanilla JS: product search/filter, category links, slide-out cart (localStorage), GSAP animations, and a testimonials carousel.</p>
             <div class="mt-3 flex gap-2">
               <a href="https://abdeladim91.github.io/PerfectionShop/" target="_blank" class="inline-flex items-center gap-2 px-3 
@@ -342,4 +342,5 @@
   </script>
 </body>
 </html>
+
 
